--- a/src/scss/06_components/navigation/_mobile-navigation.scss
+++ b/src/scss/06_components/navigation/_mobile-navigation.scss
@@ -27,6 +27,7 @@ $-cssmenu-bottom-padding: 80px; // Reserve space for mobile browser untappable-a
 [data-js] ~ * .cssmenu-toggle-button {
   @include font('special.navigation.icon_label');
   align-self: center;
+  color: $color-black-90;
   cursor: pointer;
   display: grid;
   grid-area: toggle;
