UHF-3643: Hide widgets like chats when mobile menu is open

--- a/src/scss/06_components/navigation/_mobile-navigation.scss
+++ b/src/scss/06_components/navigation/_mobile-navigation.scss
@@ -178,6 +178,11 @@ $-cssmenu-bottom-padding: 80px; // Reserve space for mobile browser untappable-a
   }
 }
 
+// Hide widgets like chats based on selectors in cssmenu.js
+[data-cssmenu-hide] {
+  display: none !important;
+}
+
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 // Navigation ul inside cssmenu
