--- a/src/scss/06_components/navigation/_mobile-navigation.scss
+++ b/src/scss/06_components/navigation/_mobile-navigation.scss
@@ -354,7 +354,7 @@ $-cssmenu-bottom-padding: 80px; // Reserve space for mobile browser untappable-a
 }
 
 // Current page and in-path links
-.cssnav__link--in-path,
+.cssnav__link.cssnav__link--in-path, // higher specificity to combat level specific font styles
 .cssnav__link--in-path + details > summary > .cssnav__text-mirror {
   font-weight: 700;
 }
