--- a/templates/navigation/menu--mobile.html.twig
+++ b/templates/navigation/menu--mobile.html.twig
@@ -28,6 +28,7 @@
 
 {% macro menu_links(items, attributes, menu_level) %}
   {% import _self as menus %}
+  {% set max_level = 5 %} {# How deep do we allow the navigation menu to traverse? Counting from "instance", "main level", "level 3", "level 4", "level 5"... #}
 
   {% if menu_level == 0 %}
     {% set ul_class = 'cssnav' %}
@@ -39,13 +40,18 @@
     <ul{{ attributes.addClass(ul_class) }}>
     {% for item in items %}
       {% set level = menu_level + 1 %}
+      {% set has_children = false %}
+      {% if level <= max_level - 2 %}
+        {% set has_children = item.below %}
+      {% endif %}
       {% set item_classes = [
         'cssnav__item',
         item.is_nolink ? 'cssnav__item--nolink',
-        item.below|length ? 'cssnav__item--has-children',
+        has_children ? 'cssnav__item--has-children',
         item.in_active_trail ? 'cssnav__item--in-path',
         'cssnav__item--level-' ~ (level + 1),
       ]%}
+
       {# <div{{ item.attributes.addClass(item_classes) }}> #}
       <li{{ item.attributes.addClass(item_classes) }}>
 
@@ -76,7 +82,7 @@
         {% else %}
           <span{{ create_attribute({'class': 'cssnav__item__nolink'} ) }}>{{ item.title }}</span>
         {% endif %}
-        {% if item.below %}
+        {% if has_children %}
           <details {{item.in_active_trail ? 'open'}}>
             <summary>
               <span class="cssnav__text-mirror">{{ item_title }}</span>
