--- a/templates/navigation/menu.html.twig
+++ b/templates/navigation/menu.html.twig
@@ -29,6 +29,7 @@
 
 {% macro menu_links(items, attributes, menu_level, allow_collabsible, auto_open) %}
   {% import _self as menus %}
+  {% set max_level = 5 %} {# How deep do we allow the navigation menu to traverse? Counting from "instance", "main level", "level 3", "level 4", "level 5"... #}
 
   {%
     set menu_classes = [
@@ -44,6 +45,13 @@
   {% if items %}
     <ul{{ attributes.addClass(menu_classes) }}>
     {% for item in items %}
+      {% set has_children = false %}
+      {% set expanded_or_active = false %}
+      {% set level = menu_level + 2 %}
+      {% if level <= max_level - 2 %}
+        {% set has_children = item.below %}
+        {% set expanded_or_active = item.is_expanded or item.in_active_trail %} {# Does this variable make any sense? #}
+      {% endif %}
 
       {% set link_id = 'aria-id-' ~ random() %}
       {% set item_is_collabsible = (allow_collabsible and (item.is_collapsed or item.is_expanded)) ? true : false %}
@@ -51,8 +59,8 @@
       {% set item_classes = [
         'menu__item',
         item.is_nolink ? 'menu__item--nolink',
-        item.is_expanded or item.in_active_trail ? 'menu__item--children',
-        item.below ? 'menu__item--item-below',
+        expanded_or_active ? 'menu__item--children',
+        has_children ? 'menu__item--item-below',
         item.in_active_trail ? 'menu__item--active-trail',
         (auto_open and item.in_active_trail) ? 'menu__item--open',
       ]%}
@@ -98,7 +106,7 @@
             </button>
           {% endif %}
         </span>
-        {% if item.below %}
+        {% if has_children %}
           {{ menus.menu_links(item.below, attributes|without('class'), menu_level + 1, allow_collabsible, auto_open) }}
         {% endif %}
       </li>
