--- a/src/scss/06_components/paragraphs/_unit-search.scss
+++ b/src/scss/06_components/paragraphs/_unit-search.scss
@@ -130,7 +130,7 @@
     &::before {
       @include pseudo-icon('alert-circle', $spacing-and-half);
       left: 0;
-      margin-top: -$spacing-and-half * 0.5;
+      margin-top: -12px; // Move icon up half of the line-height of the text that follows (line-height is 24px).
       position: absolute;
       top: 50%;
     }
@@ -181,12 +181,10 @@
 }
 
 // Unit search with large volume of units listed such as daycare search.
-.views--unit-search--large-volume {
-  .views-row {
-    margin-top: $spacing-quarter;
+.views--unit-search--large-volume .views-row {
+  margin-top: $spacing-quarter;
 
-    &:first-of-type {
-      margin-top: $spacing-and-half;
-    }
+  &:first-of-type {
+    margin-top: $spacing-and-half;
   }
 }
