--- a/templates/module/helfi_tpr/tpr-unit.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit.html.twig
@@ -252,14 +252,14 @@
 
     <div class="unit__text">
       <div class="unit__text__content">
-        <h3 class="unit__title">
+        <{{ unit_title_level|default('h3') }} class="unit__title">
           {% set unit_link_attributes = {
             'class': [
               'unit__link',
             ],
           } %}
           {{ link(entity.label, unit_url, unit_link_attributes) }}
-        </h3>
+        </{{ unit_title_level|default('h3') }}>
         <div class="unit__info">
           {% if content.address|render %}
             <div class="unit__info-row unit__info-row--address">
@@ -286,9 +286,9 @@
     <a href="{{ url('entity.tpr_unit.canonical', { 'tpr_unit': entity.id() }) }}" class="unit__link">
       <div class="unit__text">
         <div class="unit__text__content">
-          <h3 class="unit__title">
+          <{{ unit_title_level|default('h3') }} class="unit__title">
             {{ entity.label }}
-          </h3>
+          </{{ unit_title_level|default('h3') }}>
           <div class="unit__info">
             {% if content.address|render %}
               <div class="unit__info-row unit__info-row--address">
