UHF-3504: Fixed scss according to comments, fixed paragraph structure and added check if parent paragraph title exists

--- a/src/scss/06_components/paragraphs/_contact-card-listing.scss
+++ b/src/scss/06_components/paragraphs/_contact-card-listing.scss
@@ -11,15 +11,13 @@
   .contact-card {
     margin-bottom: $spacing-triple;
 
-    @include breakpoint($breakpoint-s) {
-      min-width: 252px;
-      width: 25%;
+    &:not(:last-of-type) {
+      padding-right: $spacing-and-half;
     }
-  }
 
-  .contact-card--with-image {
     @include breakpoint($breakpoint-s) {
-      min-width: 224px;
+      min-width: fit-content;
+      width: 25%;
     }
   }
 }
