--- a/templates/paragraphs/paragraph--social-media-link.html.twig
+++ b/templates/paragraphs/paragraph--social-media-link.html.twig
@@ -48,7 +48,7 @@
 
 {% block paragraph %}
   <div{{ attributes.addClass(classes) }}>
-   <a href="{{ content.field_social_media_link[0]['#url'] }}" target="_blank">
+   <a href="{{ content.field_social_media_link[0]['#url'] }}">
     {{ content.field_icon }}
     <span class="visually-hidden">{{ icon_name }}</span>
    </a>
