--- a/templates/paragraphs/paragraph--contact-card.html.twig
+++ b/templates/paragraphs/paragraph--contact-card.html.twig
@@ -1,7 +1,6 @@
 {%
   set classes = [
     'contact-card',
-    view_mode ? 'contact-card---' ~ view_mode|clean_class,
     content.field_contact_image|render ? 'contact-card--with-image'
   ]
 %}
@@ -9,18 +8,14 @@
 
 {% block paragraph %}
   <div{{ attributes.addClass(classes) }}>
-    {% if content.field_contact_image|render %}
-      <div class="contact-card--image-container">
-        {{ content.field_contact_image }}
-      </div>
-    {% else %}
-      <div class="contact-card--color-line"></div>
-    {% endif %}
+    <div class="{% if content.field_contact_image|render %}contact-card--image-container{% else %}contact-card--color-line{% endif %}">
+      {{ content.field_contact_image }}
+    </div>
     <div class="contact-card--information-container">
     {% if content.field_contact_name|render %}
-      <h3 class="contact-card--person-information contact-card--person-name">
+      <{{ heading_level|default('h2') }} class="contact-card--person-information contact-card--person-name">
         {{ content.field_contact_name }}
-      </h3>
+      </{{ heading_level|default('h2') }}>
     {% endif %}
     {% if content.field_contact_title|render %}
       <div class="contact-card--person-information">
