UHF-3504: Changed thr way links are rendered and fixed icon width and height as varables

--- a/src/scss/06_components/paragraphs/_contact-card.scss
+++ b/src/scss/06_components/paragraphs/_contact-card.scss
@@ -23,9 +23,9 @@ $contact-card-color-line-width: 4px;
   display: flex;
 
   .hel-icon {
-    height: 24px;
+    height: $spacing-and-half;
     margin-right: $spacing-half;
-    width: 24px;
+    width: $spacing-and-half;
   }
 }
 
