UHF-3922: Finished styling the voting page

--- a/src/scss/06_components/layout/__index.scss
+++ b/src/scss/06_components/layout/__index.scss
@@ -9,6 +9,7 @@
 @import 'layout-content';
 @import 'layout-main-wrapper';
 @import 'layout-sidebar-first';
+@import 'login-page';
 @import 'lower-content';
 @import 'main-content';
 @import 'maintenance-page';
