--- a/src/scss/06_components/forms/_openid-connect-login-form.scss
+++ b/src/scss/06_components/forms/_openid-connect-login-form.scss
@@ -1,6 +1,11 @@
 .openid-connect-login-form {
-  border-top: 1px solid $color-black-60;
+  border-bottom: 1px solid $color-black-60;
+  margin-bottom: $spacing-double;
   // Make the user login form look decent
   max-width: 600px;
-  padding-top: $spacing;
+  padding-bottom: $spacing-double;
+
+  input {
+    width: 100%;
+  }
 }
