--- a/src/scss/06_components/pages/_news-page.scss
+++ b/src/scss/06_components/pages/_news-page.scss
@@ -11,47 +11,9 @@
 }
 
 .news-listing__item {
-  display: flex;
   list-style: none;
   margin-top: $spacing-and-half;
   position: relative;
-}
-
-.news-listing__img {
-  flex-shrink: 0;
-  height: 78px;
-  width: 78px;
-}
-
-.news-listing__img img {
-  @include image-defaults($width: 100%, $max-width: null);
-}
-
-.news-listing__img .image-placeholder {
-  align-items: center;
-  background-color: $color-black-10;
-  display: flex;
-  height: 100%;
-  justify-content: center;
-  padding-bottom: 0;
-  width: 100%;
-  &::before {
-    @include pseudo-icon('camera', $spacing, $color-black-90, block);
-  }
-}
-
-.news-listing__img .image-placeholder svg {
-  display: none; //TODO: clean this up after we know what we do with icons
-}
-
-.news-listing__content {
-  margin-left: $spacing-and-half;
-}
-
-.news-listing__title {
-  @include font('body');
-  margin-bottom: $spacing-half;
-  margin-top: 0;
 }
 
 .news-listing__link {
@@ -62,7 +24,6 @@
   &:hover {
     text-decoration: underline;
   }
-
 
   &::after {
     bottom: 0;
@@ -83,6 +44,103 @@
   width: 100%;
 }
 
-.news-listing__img {
-  @include loading-image-background();
+// News listings using tiny-teasers.
+.news-listing--latest-tiny-teasers {
+  .news-listing__item {
+    display: flex;
+  }
+
+  .news-listing__img {
+    flex-shrink: 0;
+    height: 78px;
+    width: 78px;
+  }
+
+  .news-listing__img img {
+    @include image-defaults($width: 100%, $max-width: null);
+  }
+
+  .news-listing__img .image-placeholder {
+    align-items: center;
+    background-color: $color-black-10;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    padding-bottom: 0;
+    width: 100%;
+    &::before {
+      @include pseudo-icon('camera', $spacing, $color-black-90, block);
+    }
+  }
+
+  .news-listing__img .image-placeholder svg {
+    display: none; //TODO: clean this up after we know what we do with icons.
+  }
+
+  .news-listing__img {
+    @include loading-image-background();
+  }
+
+  .news-listing__content {
+    margin-left: $spacing-and-half;
+  }
+
+  .news-listing__title {
+    @include font('body');
+    margin-bottom: $spacing-half;
+    margin-top: 0;
+  }
+}
+
+// News listings using teasers.
+.news-listing--latest-teasers {
+  @include breakpoint($breakpoint-m) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .news-listing__item {
+    &:first-child {
+      margin-top: 0;
+    }
+
+    &:nth-child(2) {
+      @include breakpoint($breakpoint-m) {
+        margin-top: 0;
+      }
+    }
+
+    @include breakpoint($breakpoint-m) {
+      margin-top: $spacing-double;
+      padding-right: $spacing-and-half;
+      width: 50%;
+    }
+  }
+
+  .news-listing__content {
+    border-left: 4px solid var(--hdbt-color-palette--accent);
+    padding-left: $spacing;
+
+    @include breakpoint($breakpoint-l) {
+      padding-left: $spacing-and-half;
+    }
+  }
+
+  .news-listing__title {
+    @include font(h5);
+    margin-top: 0;
+
+    @include breakpoint($breakpoint-l) {
+      @include font(h4);
+    }
+  }
+
+  .news-listing__datetime {
+    display: block;
+    margin-top: $spacing;
+
+    @include breakpoint($breakpoint-l) {
+      margin-top: $spacing-and-half;
+    }
+  }
 }
