UHF-4532: Adjusted the daycare search styles according to feedback

--- a/src/scss/06_components/pages/_unit.scss
+++ b/src/scss/06_components/pages/_unit.scss
@@ -607,6 +607,8 @@
   .unit__info {
     @include breakpoint($breakpoint-m) {
       display: flex;
+      justify-content: space-between;
+      padding-right: $spacing-and-half;
       width: 40%;
     }
   }
