UHF-3922: Changed login button to secondary

--- a/templates/form/submit/input--submit.html.twig
+++ b/templates/form/submit/input--submit.html.twig
@@ -14,7 +14,7 @@
 {%
  set button_classes = [
   'hds-button',
-  'hds-button--primary'
+  is_login_submit ? 'hds-button--secondary' : 'hds-button--primary'
  ]
 %}
 
