UHF-5195: Started on unifying the map templates

--- a/templates/paragraphs/paragraph--map.html.twig
+++ b/templates/paragraphs/paragraph--map.html.twig
@@ -13,5 +13,10 @@
 
     {% endblock component_content %}
   {% endembed %}
+  {% include '@hdbt/component/map.twig' with {
+    title: content.field_map_title,
+    description: content.field_map_description,
+    map: content.field_map_map,
+  } %}
 {% endblock paragraph %}
 
