--- a/templates/module/helfi_tpr/tpr-service.html.twig
+++ b/templates/module/helfi_tpr/tpr-service.html.twig
@@ -2,15 +2,16 @@
 /**
  * @file
  * Theme for service entity.
+ *
+ * Variables:
+ * - in_menu: A boolean indicating whether the service is in menu or not
+ *
+ * @see hdbt_content_preprocess_tpr_service()
  */
 #}
 
 {% if not block_name %}
   {% set block_name = 'main_navigation_level_2' %}
-{% endif %}
-
-{% if drupal_entity('block', block_name, check_access=false)|render|striptags|trim is not empty %}
-  {% set in_menu =  TRUE %}
 {% endif %}
 
 {% if content.field_sidebar_content|render|striptags|trim is not empty %}
@@ -39,7 +40,7 @@
 
   {% block main_content %}
     {% if content.field_content|render|striptags|trim is not empty %}
-      <div class="enriched-content has-sidebar components components--service">
+      <div class="enriched-content components components--service {{ has_sidebar ? 'has-sidebar' }}">
         {{ content.field_content }}
       </div>
     {% endif %}
