--- a/templates/module/helfi_tpr/tpr-unit.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit.html.twig
@@ -3,6 +3,10 @@
  * @file
  * Theme for unit entity.
  *
+ * Variables:
+ * - in_menu: A boolean indicating whether the unit is in menu or not
+ *
+ * @see hdbt_content_preprocess_tpr_unit()
  */
 #}
 
@@ -10,9 +14,6 @@
   {% set block_name = 'main_navigation_level_2' %}
 {% endif %}
 
-{% if drupal_entity('block', block_name, check_access=false)|render|striptags|trim is not empty %}
-  {% set in_menu =  TRUE %}
-{% endif %}
 {% if drupal_entity('block', 'groupmenu')|render|striptags|trim is not empty %}
   {% set group_menu = TRUE %}
   {% set in_menu = TRUE %}
@@ -64,7 +65,7 @@
         {% endif %}
 
         {% block main_content %}
-          <div class="enriched-content has-sidebar components components--unit">
+          <div class="enriched-content components components--unit {{ has_sidebar ? 'has-sidebar' }}">
             {{ content.field_content }}
           </div>
         {% endblock main_content %}
