--- a/templates/paragraphs/paragraph--remote-video.html.twig
+++ b/templates/paragraphs/paragraph--remote-video.html.twig
@@ -13,6 +13,12 @@
 {% if not paragraph_title|render and not paragraph_desc|render %}
   {% set header_class = 'component--no-header' %}
 {% endif %}
+
+{% set video_title_level = 'h2' %}
+{% if paragraph_title|render %}
+  {% set video_title_level = 'h3' %}
+{% endif %}
+
 {% block paragraph %}
   {% embed "@hdbt/misc/component.twig" with
     {
@@ -29,7 +35,9 @@
       <div class="remote-video__video">
         {{ video }}
       </div>
-      <h3 class="remote-video__video-title">{{ video_title }}</h3>
+      {% if video_title|render %}
+        <{{ video_title_level }} class="remote-video__video-title">{{ video_title }}</{{ video_title_level }}>
+      {% endif %}
       <div class="remote-video__video-desc">{{ video_desc }}</div>
     {% endblock component_content %}
   {% endembed %}
