--- a/templates/module/helfi_tpr/tpr-unit.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit.html.twig
@@ -70,13 +70,14 @@
         {% endblock main_content %}
 
         {% if content.service_map_embed|render %}
-          <div class="unit__map">
-            <label class="unit__map__label">
-              {% include '@hdbt/misc/icon.twig' ignore missing with {icon: 'location'} %}
-              {{ 'Location'|t }}
-            </label>
-            {{ content.service_map_embed }}
-          </div>
+          {% set map_title %}
+            {% include '@hdbt/misc/icon.twig' ignore missing with {icon: 'location'} %}
+            {{ 'Location'|t }}
+          {% endset %}
+          {% include '@hdbt/component/map.twig' with {
+            title: map_title,
+            map: content.service_map_embed,
+          } %}
         {% endif %}
 
       </div>
