UHF-3884: Fixed margins for main-content as the basic page title block render logic has changed.

--- a/src/scss/06_components/layout/_layout-main-wrapper.scss
+++ b/src/scss/06_components/layout/_layout-main-wrapper.scss
@@ -1,5 +1,4 @@
-.has-sidebar .layout-main-wrapper,
-.no-sidebar .main-content {
+.main-content {
   margin-top: $spacing-quadruple;
 
   @include breakpoint($breakpoint-l) {
