--- a/src/scss/06_components/paragraphs/_liftup-with-image.scss
+++ b/src/scss/06_components/paragraphs/_liftup-with-image.scss
@@ -31,6 +31,10 @@ $breakpoint-design-image-on-left-right: 830px;
   > *:first-child {
     margin-top: 0;
   }
+
+  a {
+    --hdbt-default-link-color: var(--hdbt-color-palette-text--primary);
+  }
 }
 
 .liftup-with-image__content .hds-button {
