--- a/src/scss/06_components/navigation/_table-of-contents.scss
+++ b/src/scss/06_components/navigation/_table-of-contents.scss
@@ -1,6 +1,10 @@
 .table-of-contents {
   @include components-container-max-width();
 
+  &:not(:first-child) {
+    @include component-margin-top;
+  }
+
   @include breakpoint($breakpoint-m) {
     @include component-side-padding();
     margin-left: auto;
@@ -22,7 +26,6 @@
 }
 
 .table-of-contents__container {
-  @include component-margin-top();
   background-color: $color-silver-light;
   border-left: $spacing-half solid $color-gold;
   // Max-width: Content max width (860px) + left and right paddings.
