UHF-4768: Added template for service map emded

--- a/templates/module/helfi_tpr/tpr-unit.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit.html.twig
@@ -76,7 +76,7 @@
           {% include '@hdbt/component/map.twig' with {
             title: map_title,
             map: content.service_map_embed,
-            description: content.address
+            description: content.address,
           } %}
         {% endif %}
 
